--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - '.:/app'
+      - '/app/node_modules'
     ports:
       - 5000:5000
     environment:
